# evdevil

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: fftest.rs  keymap.rs  list.rs  uinput.rs
src/: abs_info.rs  batch.rs  bits.rs  enumerate.rs  evdev.rs  event.rs  ff.rs  hotplug.rs  input_id.rs  key_repeat.rs  keymap_entry.rs  lib.rs  log.rs  macros.rs  reader.rs  test.rs  uinput.rs  util.rs
src/event/: codes.rs  serde.rs
src/hotplug/: async.rs  fallback.rs  freebsd.rs  linux.rs
src/raw/: input.rs  uinput.rs
src/reader/: async.rs  tests.rs
src/uinput/: async.rs
src/util/: async.rs
tests/: build.rs  hotplug.rs  local.rs  tests.rs
tests/loopback/: clock.rs  events.rs  ff.rs  main.rs  mt.rs  repeat.rs  revoke.rs
