[package]
name = "evdevil"
version = "0.1.0"
edition = "2024"
license = "0BSD"
description = "Bindings to Linux' input device APIs: evdev and uinput"
categories = ["os::linux-apis", "hardware-support"]
rust-version = "1.85"

[dependencies]
libc = "0.2.172"
linux-ioctl = "0.2.2"
log = "0.4.27"


[dev-dependencies]
env_logger = "0.11.8"

[[test]]
name = "hotplug"
harness = false
